--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <% if current_user %>
       <div class="navbar-header">
         <a class="navbar-brand" href="/logout">Log Out</a>
+        <a class="navbar-brand" href="/users/#{current_user.id}/edit">Edit profile</a>
       </div>
     <% else %>
       <div class="navbar-header">
