added bootstap. Made UI changes to navbar

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,12 +6,9 @@ Tags:
   <li> <%= tag.name %> </li>
 <% end %>  
 
+<div class="button"> <a href="/posts/<%= @post.id %>/edit"> Edit Post </a> </div>
 
-
-<p>   
-<p>
+<br>
 =============================
-<p>
-
-<p>   
+<br>
 <div class="button"> <a href="/"> Back to My Feed </a> </div>
