--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,27 @@
 
   <body>
 
-    <% if current_user %>
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/logout">Log Out</a>
-        <a class="navbar-brand" href="/users/<%= current_user.id %>/edit">Edit profile</a>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">DroneEye</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Don't Click!</a></li>
+          <li><a href="/myfeed">My Feed</a></li>
+          <li><a href="/discover">Discover</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+            <li><a href="/users/<%= current_user.id %>/edit"><span class="glyphicon glyphicon-user"></span> Edit Profile</a></li>
+            <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+          <% else %>
+            <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <% end %>
+        </ul>
       </div>
-    <% else %>
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/signup">Sign Up</a>
-        <a class="navbar-brand" href="/login">Log In</a>
-      </div>
-    <% end %>
-
+    </nav>
 
     <% flash.each do |key, message|%>
       <div class="alert alert-<%= key %> alert-dismissible" role="alert">
@@ -29,7 +38,6 @@
         <%= message %>
       </div>
     <%end%>
-
 
     <%= yield %>
   </body>
