--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
+          <a class="navbar-brand" href="/">
+          <img src="https://asset1.djicdn.com/images/360/phantom-4/draggable_360_v2/0_0.png" width="80" height="40" class="d-inline-block align-top" alt="">
+          </a>
           <a class="navbar-brand" href="/">DroneEye</a>
+          
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Don't Click!</a></li>
