added delete functionality  for posts

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -20,5 +20,8 @@
   
   <input type="submit" value="Update post">
 
-
 <% end %>
+
+  <br>
+  <%= button_to "Delet Post", {:controller => :posts,
+      :action => 'destroy', :id => @post.id }, :method => :delete %>
