added some cool error pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Don't Click!</a></li>
+          <li class="active"><a href="/didntitellyou">Don't Click!</a></li>
           <li><a href="/myfeed">My Feed</a></li>
           <li><a href="/discover">Discover</a></li>
         </ul>
