--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -23,5 +23,5 @@
 <% end %>
 
   <br>
-  <%= button_to "Delet Post", {:controller => :posts,
+  <%= button_to "Delete Post", {:controller => :posts,
       :action => 'destroy', :id => @post.id }, :method => :delete %>
