--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,21 @@
-<h1>Hi there! Wanna be part of cool society? Let's get you an account!</h1>
-<h3> Please provide info in form below:</h3>
-
-<%= form_tag '/users', method: :post do  %>
-  Nickname: <input type="text" name="nickname"> <br>
-  Email: <input type="email" name="email"> <br>
-  Password: <input type="password" name="password"> <br>
-  Confirm Password: <input type="password" name="password_confirmation"> <br>
-  Location: <input type="text" name="location"> <br>
-  <input type="submit" value="Sign Me Up">
-<% end %>
+<div class="container">
+  <h1>Hi there! Wanna be part of cool society? Let's get you an account!</h1>
+  <h3> Please provide info in form below:</h3>
+  <%= form_tag '/users', method: :post do  %>
+    Nickname: <input type="text" name="nickname"> <br>
+    Email: <input type="email" name="email"> <br>
+    Password: <input type="password" name="password"> <br>
+    Confirm Password: <input type="password" name="password_confirmation"> <br>
+    Location: <input type="text" name="location"> <br>
+    
+    <!-- Tags -->
+    <h4>What are you interested in?</h4>
+    <p>Please check things that you are excited about, we will try to show you content based on your interests:</p>
+      <% @tags.each do |tag| %>
+        <div class="checkbox">
+          <label><input type="checkbox" name="tag_id" value="<%= tag.id %>"><%= tag.name %></label>
+        </div>
+      <% end %>
+    <input type="submit" value="Sign Me Up">
+  <% end %>
+</div>
