--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,34 @@
-<div class="container">
-  <h1>Hi there! Wanna be part of cool society? Let's get you an account!</h1>
-  <h3> Please provide info in form below:</h3>
-  <%= form_tag '/users', method: :post do  %>
-    Nickname: <input type="text" name="nickname"> <br>
-    Email: <input type="email" name="email"> <br>
-    Password: <input type="password" name="password"> <br>
-    Confirm Password: <input type="password" name="password_confirmation"> <br>
-    Location: <input type="text" name="location"> <br>
+<h1>Hi there! Wanna be part of cool society? Let's get you an account!</h1>
+<%= form_tag '/users', method: :post do  %>
+
+  <fieldset>
+    <legend><span class="number">1</span>Your basic info</legend>
+    <label for="name">Nickname:</label>
+    <input type="text" id="nickname" name="nickname">
     
-    <!-- Tags -->
-    <h4>What are you interested in?</h4>
+    <label for="mail">Email:</label>
+    <input type="email" id="mail" name="email">
+    
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password">
+
+    <label for="password">Confirm Password:</label>
+    <input type="password" id="password" name="password_confirmation">
+  </fieldset>
+  
+  <fieldset>
+    <legend><span class="number">2</span>Your profile</legend>
+    <label for="location">Location:</label>
+    <input type="text" id="location" name="location">
+  
+    <label>Interests:</label>
     <p>Please check things that you are excited about, we will try to show you content based on your interests:</p>
-      <% @tags.each do |tag| %>
-        <div class="checkbox">
-          <label><input type="checkbox" name="tag_id" value="<%= tag.id %>"><%= tag.name %></label>
-        </div>
-      <% end %>
-    <input type="submit" value="Sign Me Up">
-  <% end %>
-</div>
+    <% @tags.each do |tag| %>
+      <div><input type="checkbox" value="<%= tag.id %>" name="tag_ids[]"/>
+      <label class="light" for="tag_ids[]"><%= tag.name %></label></div>
+    <% end %>
+  </fieldset>
+
+  <button type="submit">Sign Up</button>
+
+<% end %>
