--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+.changePassword {
+  margin-top: 40px;
+}
+
 body {
   font-family: 'Nunito', sans-serif;
   color: #384047;
