added example of post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <a class="navbar-brand" href="/">
           <img src="https://asset1.djicdn.com/images/360/phantom-4/draggable_360_v2/0_0.png" width="80" height="40" class="d-inline-block align-top" alt="">
           </a>
-          <a class="navbar-brand" href="/">DroneEye</a>
+          <a class="navbar-brand" href="/posts">DroneEye</a>
         </div>
           <% if current_user %>
             <ul class="nav navbar-nav">
