--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,7 +9,6 @@
   <% end %>
 </div>
 
-
 <%= form_tag "/posts/#{(@post.id)}", method: :patch do %>
   <div>
     Make <input type="text" name="title" value="<%= @post.title %>">
@@ -17,11 +16,12 @@
   <div>
     Model <input type="text" name="description" value="<%= @post.description %>">
   </div>
-  
+  <% @tags.each do |tag| %>
+    <input type="checkbox" value="<%= tag.id %>" name="tag_ids[]"/>
+    <label class="light" for="tag_ids[]"><%= tag.name %></label><br>
+  <% end %>
   <input type="submit" value="Update post">
 
 <% end %>
-
-  <br>
   <%= button_to "Delete Post", {:controller => :posts,
       :action => 'destroy', :id => @post.id }, :method => :delete %>
