--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,7 +31,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-sm-10">
-              <h3 class="panel-title"><%= post.title %></h3>
+              <h3 class="panel-title"><a href="posts/<%=post.id%>"><%= post.title %></a></h3>
             </div>
             <div class="col-sm-2">
               <h3 class="panel-title"> <%= post.user.name %></h3>
@@ -39,6 +39,9 @@
           </div>
         </div>
         <div class="panel-body"><%= post.description %> </div>
+        <% post.tags.each do |tag| %>
+          <li> <%= tag.name %> </li>
+        <% end %>  
     </div>
   </div>
 <% end %>
