--- a/app/views/posts/discover.html.erb
+++ b/app/views/posts/discover.html.erb
@@ -5,7 +5,53 @@
 
 
 <% @posts.each do |post| %>
-  <p> <%= post.title %> </p>
-  <p> <%= post.description %> </p>
-  <br>
+  <div class="post">
+    <div class="panel panel-success">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-sm-10">
+              <h3 class="panel-title"><a href="posts/<%=post.id%>"><%= post.title %></a></h3>
+            </div>
+            <div class="col-sm-2">
+              <h3 class="panel-title"><a href="users/<%=post.user.id%>"> <%= post.user.name %></a></h3>
+              <%= form_tag "/users/subscribe", method: :post do %>
+                <input type="hidden" name="subscribed_to_id" value=<%="#{post.user.id}"%>>
+                <button type="submit" class="btn btn-default btn-sm">Follow</button>
+              <%end%>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body"><%= post.description %> </div>
+        <% post.tags.each do |tag| %>
+          <li> <%= tag.name %> </li>
+        <% end %> 
+          <!-- COMMENTS -->
+        <% if post.comments.first %>
+          <br> 
+          <h4>Comments: </h4>
+          <% post.comments.each do |comment| %>
+            <div class="post">
+              <div class="panel panel-success">
+                  <div class="panel-heading">
+                    <h4> <%= comment.user.nickname %> </h4>
+                  </div>
+              </div>
+            </div>
+            <div class="panel-body"><%= comment.content %></div>
+        <%end%>
+          <br>
+          <!-- WRITE A COMMENT -->
+        <% end %>  
+        <div class="container">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment">Leave a comment</button>
+          <div id="comment" class="collapse">
+            <%= form_tag "/posts/#{post.id}/comment", method: :post do %>
+              <input type="text" name="content">
+              <input type="hidden" name="post_id" value="#{post.id}">
+              <button type="submit">Send</button>
+            <% end %>
+          </div>
+        </div>
+    </div>
+  </div>
 <% end %>
