--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,7 +34,11 @@
               <h3 class="panel-title"><a href="posts/<%=post.id%>"><%= post.title %></a></h3>
             </div>
             <div class="col-sm-2">
-              <h3 class="panel-title"><a href="users/<%=post.user.id%>"> <%= post.user.name %></a></h3>
+              <h3 class="panel-title"><a href="users/<%=post.user_id%>"> <%= post.user.name %></a></h3>
+              <%= form_tag "/users/subscribe", method: :post do %>
+                <input type="hidden" name="subscribed_to_id" value=<%="#{post.user.id}"%>>
+                <button type="submit" class="btn btn-default btn-sm">Follow</button>
+              <%end%>
             </div>
           </div>
         </div>
