added landing page. My Feed and Discover are open now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,12 @@ body {
   background-image: url("concrete-texture.png");
 }
 
+
 .postImage{
-  width: 1250px;
+  width: 1260px;
   text-align: center;
 }
 
-.post {
-  margin-bottom: 30px;
+.terms {
+  padding-bottom: 30px;
 }
