--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,12 @@
 <h1>Hi there! Wanna be part of cool society? Let's get you an account!</h1>
 <%= form_tag '/users', method: :post do  %>
-
+    <div class="terms">
+      <h4>Allright, first, few rules of our community: </h4>
+      <li> No pictures of food or cats. (This is not an instagram! This is very high level premium community. No crap here!)</li>
+      <li> Keep in mind, I do not have time to clean up after you, people! Do not post any inappropriate content here. I'll track you down and chop your fingers off! I have a knife! </li>
+      <li> Do not say anything bad about creator of this web site! I am from Russia, ok? I DO NOT KNOW what democracy is! And I have a knife, remember? </li>
+      <h4>If that make sense and you agree on terms and conditions listed above, please go ahead and provide some information:</h4>
+    </div>
   <fieldset>
     <legend><span class="number">1</span>Your basic info</legend>
     <label for="name">Nickname:</label>
