--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,6 +9,14 @@
   box-sizing: border-box;
 }
 
+.about {
+  margin-left: 100px;
+  margin-bottom: 30px;
+  margin-right: 100px;
+  margin-top: 20px;
+  text-align: center;
+}
+
 .changePassword {
   margin-top: 40px;
 }
