--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-
+    <!-- ENABLING ANGULAR -->
+    
+        
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -51,5 +53,6 @@
     <%end%>
 
     <%= yield %>
+
   </body>
 </html>
