--- a/app/views/posts/discover.html.erb
+++ b/app/views/posts/discover.html.erb
@@ -10,7 +10,7 @@
               <h3 class="panel-title"><a href="posts/<%=post.id%>"><%= post.title %></a></h3>
             </div>
             <div class="col-sm-2">
-              <h3 class="panel-title"><a href="users/<%=post.user.id%>"> <%= post.user.name %></a></h3>
+              <h3 class="panel-title"><a href="users/<%=post.user.id%>"> <%= post.user.nickname %></a></h3>
               <%= form_tag "/users/subscribe", method: :post do %>
                 <input type="hidden" name="subscribed_to_id" value=<%="#{post.user.id}"%>>
                 <button type="submit" class="btn btn-default btn-sm">Follow</button>
