minor UI changes

--- a/app/views/posts/ohgod.html.erb
+++ b/app/views/posts/ohgod.html.erb
@@ -1,3 +1,4 @@
-<h2> Oh God! </h2>
-<a href="/getout"><%=image_tag("ohgod.jpg")%> </a>
-
+<div class="margin-up">
+  <h2> Oh God! </h2>
+  <a href="/getout"><%=image_tag("ohgod.jpg")%> </a>
+</div>
