--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -1,9 +1,9 @@
 
 
-<div class="about">
+<div class="about margin-up">
   <h4>Hello.
   My name is Boris. 
-  I bought DJI Drone for me as my Birthday treat in december 2016.
+  I bought DJI Drone for me as a Birthday gift for myself in december 2016.
   Since then I'm in love with it. Seeing pictures and videos taken from the sky is so amazing. Even regular things that you see every day look so much different from above.
   <br>
   So there wasn't really a question what do I want to do for my capstone project. I wanted to do something related to my passion. And Social platform, allowing users to share and discover pictures taken from Drones, is related to my passion to Drones and to photography/videography at the same time.
