--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -151,11 +151,6 @@
                     </a>
                   </li>
                 <% else %>
-                  <li class="active">
-                    <a href="/didntitellyou">
-                      Don't Click!
-                    </a>
-                  </li>
                   <li>
                     <a href="/signup">
                       <span class="glyphicon glyphicon-user"></span> Sign Up
@@ -177,14 +172,12 @@
       <!-- /Top Nav -->
     </div>
 
-    <div class="margin-up">
-      <% flash.each do |key, message|%>
-        <div class="alert alert-<%= key %> alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= message %>
-        </div>
-      <%end%>
-    </div>
+    <% flash.each do |key, message|%>
+      <div class="alert alert-<%= key %> alert-dismissible margin-up" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= message %>
+      </div>
+    <%end%>
 
     <!-- OTHER PAGES CONTENT -->
     <%= yield %>
