--- a/app/views/posts/getout.html.erb
+++ b/app/views/posts/getout.html.erb
@@ -1,1 +1,3 @@
-<img src="https://s-media-cache-ak0.pinimg.com/736x/7b/64/51/7b64519919c3d9edf25caac5228b1c89--angry-emoticon-angry-smiley.jpg">
+<div class="margin-up">
+  <img src="https://s-media-cache-ak0.pinimg.com/736x/7b/64/51/7b64519919c3d9edf25caac5228b1c89--angry-emoticon-angry-smiley.jpg">
+</div>
