--- a/app/views/posts/myfeed.html.erb
+++ b/app/views/posts/myfeed.html.erb
@@ -1,60 +1,101 @@
-<h4>This is My Feed section. Here you can see content posted by people you follow.</h4>
-<br>
+<div class="margin-up">
+  <h4>This is My Feed section. Here you can see content posted by people you follow.</h4>
+  <br>
 
-<% @posts.each do |ary| %>
-  <% ary.each do |post| %>
-    <div class="post">
-      <div class="panel panel-success">
-          <div class="panel-heading">
-            <div class="row">
-              <div class="col-sm-10">
-                <h3 class="panel-title"><a href="posts/<%=post.id%>"><%= post.title %></a></h3>
-              </div>
-              <div class="col-sm-2">
-                <h3 class="panel-title"><a href="users/<%=post.user.id%>"> <%= post.user.nickname %></a></h3>
-                <%= form_tag "/users/subscribe", method: :post do %>
-                  <input type="hidden" name="subscribed_to_id" value=<%="#{post.user.id}"%>>
-                  <button type="submit" class="btn btn-default btn-sm">Follow</button>
-                <%end%>
-              </div>
-            </div>
-          </div>
-          <img class="postImage" src=<%= post.image.url %>>
-          <div class="panel-body"><%= post.description %> </div>
+  <% @posts.each do |ary| %>
+    <% ary.each do |post| %>
+      <section>
+        <div class="container">
+
+          <h1 class="blog-post-title"><a href="posts/<%=post.id%>"><%= post.title %></a></h1>
+
+
+          <ul class="blog-post-info list-inline">
+            <li>
+              <a href="#">
+                <i class="fa fa-clock-o"></i> 
+                <span class="font-lato"><%=post.created_at.strftime("%A, %b %d")%></span>
+              </a>
+            </li>
+            <li>
+              <a href="users/<%=post.user_id%>">
+                <i class="fa fa-user"></i> 
+                <span class="font-lato"><%= post.user.nickname %></span>
+              </a>
+            </li>
+          </ul>
+
+          <!-- OWL SLIDER -->
+            <a href="posts/<%=post.id%>">
+              <img class="img-fluid" src=<%= post.image.url %> alt="" />
+            </a>
+          <!-- /OWL SLIDER -->
+
+          <!-- description -->
+          <p class="dropcap"><%= post.description %></p>
+          <!-- /description -->
+
+
+
+
+
+          <!-- TAGS -->
           <% post.tags.each do |tag| %>
-            <li> <%= tag.name %> </li>
-          <% end %> 
-            <!-- COMMENTS -->
-          <% if post.comments.first %>
-            <br> 
-            <h4>Comments: </h4>
-            <% post.comments.each do |comment| %>
-              <div class="post">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                      <h4> <%= comment.user.nickname %> </h4>
-                    </div>
+            <a class="tag" href="#">
+              <span class="txt"><%= tag.name %></span>
+            </a>
+          <% end %>
+          <!-- /TAGS -->
+         
+          <!-- COMMENTS -->
+          <div id="comments" class="comments">
+            <% if post.comments.first %>
+              <h4 class="page-header mb-60 fs-20">
+                <span><%=post.comments.count%></span> COMMENTS
+              </h4>
+              <% post.comments.each do |comment| %>
+                <div class="comment-item">
+                  <div class="media-body">
+                    <h4 class="media-heading bold"><%= comment.user.nickname %></h4>
+                    <%= comment.content %>
+                  </div>
                 </div>
-              </div>
-              <div class="panel-body"><%= comment.content %></div>
-          <%end%>
-            <br>
-            <!-- WRITE A COMMENT -->
-          <% end %>  
-          <div class="container">
-            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#comment">Leave a comment</button>
-            <div id="comment" class="collapse">
-              <%= form_tag "/posts/#{post.id}/comment", method: :post do %>
-                <input type="text" name="content">
+              <%end%>
+            <% end %>
+
+              <!-- VOTE 
+              <form method="post" action="/posts/#{post.id}/vote">
                 <input type="hidden" name="post_id" value="#{post.id}">
-                <button type="submit">Send</button>
-              <% end %>
-            </div>
+                <button type="submit">VoteUp!</button>
+              </form> -->
+            
           </div>
-      </div>
-    </div>
+
+          <div id="comments" class="comments">
+                <!-- Form -->
+                <%= form_tag "/posts/#{post.id}/comment", method: :post do %>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <label>COMMENT</label>
+                      <input type="text" name="content">
+                      <input type="hidden" name="post_id" value="#{post.id}">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <button type="submit" class="btn btn-3d btn-lg btn-reveal btn-black">Send</button>
+                    </div>
+                  </div>
+
+                <% end %>
+                <!-- /Form -->
+
+          </div>
+          <!-- /COMMENTS -->
+
+        </div>
+      </section>
+      <div class="divider divider-dotted"><!-- divider --></div>
+    <% end %>
   <% end %>
-<% end %>
-<form method="get" action="/about">
-    <button type="submit">About</button>
-</form>
+</div>
