initial commit for presentation branch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,20 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
 
     <!-- CORE CSS -->
-    <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
     <!-- REVOLUTION SLIDER -->
-    <link href="plugins/slider.revolution.v5/css/pack.css" rel="stylesheet" type="text/css" />
-    <link href="plugins/slider.revolution.v5/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet" type="text/css" />
+    <link href="/plugins/slider.revolution.v5/css/pack.css" rel="stylesheet" type="text/css" />
+    <link href="/plugins/slider.revolution.v5/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet" type="text/css" />
 
     <!-- THEME CSS -->
-    <link href="css/essentials.css" rel="stylesheet" type="text/css" />
-    <link href="css/layout.css" rel="stylesheet" type="text/css" />
+    <link href="/css/essentials.css" rel="stylesheet" type="text/css" />
+    <link href="/css/layout.css" rel="stylesheet" type="text/css" />
 
 
     <!-- PAGE LEVEL SCRIPTS -->
-    <link href="css/color_scheme/blue.css" rel="stylesheet" type="text/css" />
-    <link href="css/header-1.css" rel="stylesheet" type="text/css" />
+    <link href="/css/color_scheme/blue.css" rel="stylesheet" type="text/css" />
+    <link href="/css/header-1.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="smoothscroll enable-animation">
@@ -271,15 +271,15 @@
 
 
   <!-- JAVASCRIPT FILES -->
-  <script type="text/javascript">var plugin_path = 'plugins/';</script>
-  <script type="text/javascript" src="plugins/jquery/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript">var plugin_path = '/plugins/';</script>
+  <script type="text/javascript" src="/plugins/jquery/jquery-3.2.1.min.js"></script>
 
   <script type="text/javascript" src="/js/scripts.js"></script>
 
   <!-- REVOLUTION SLIDER -->
-  <script type="text/javascript" src="plugins/slider.revolution.v5/js/jquery.themepunch.tools.min.js"></script>
-  <script type="text/javascript" src="plugins/slider.revolution.v5/js/jquery.themepunch.revolution.min.js"></script>
-  <script type='text/javascript' src='plugins/slider.revolution.v5/revolution-addons/slicey/js/revolution.addon.slicey.min.js?ver=1.0.0'></script>
+  <script type="text/javascript" src="/plugins/slider.revolution.v5/js/jquery.themepunch.tools.min.js"></script>
+  <script type="text/javascript" src="/plugins/slider.revolution.v5/js/jquery.themepunch.revolution.min.js"></script>
+  <script type='text/javascript' src='/plugins/slider.revolution.v5/revolution-addons/slicey/js/revolution.addon.slicey.min.js?ver=1.0.0'></script>
 
   <script type="text/javascript">
     jQuery(document).ready(function() {
