--- a/app/views/posts/didntitellyou.html.erb
+++ b/app/views/posts/didntitellyou.html.erb
@@ -1,4 +1,4 @@
 <div class="margin-up">
-  <h2> Did I not tell you to not click on that button? </h2>
+  <h2> Did I not tell you to not click on that button?! </h2>
   <a href="/ohgod"><%=image_tag("didntitellyou.jpg")%> </a>
 </div>
